--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "calculator_app_react",
+  "homepage": "https://amishranpariya.github.io/calculator_app_react/docs/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
